--- a/templates/base.html
+++ b/templates/base.html
@@ -52,28 +52,46 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto " href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About Us</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a class="nav-link scrollto" href="#about"> <span> About Us </span><i class="bi bi-chevron-down"></i></a>
+
+          <ul>
+            <li><a href="#">Who We Are</a></li>
+            <li><a href="#">Our Purpose</a></li>
+            <li><a href="#">Our Values</a></li>
+            <li><a href="#">What We Do</a></li>
+          </ul>
+
+          </li>
+
+          <li class="dropdown"><a class="nav-link scrollto" href="#about"> <span> Contact </span><i class="bi bi-chevron-down"></i></a>
+
+          <ul>
+            <li><a href="#">Let Us Know</a></li>
+            <li><a href="#">Information</a></li>
+            <li><a href="#">Enquiries</a></li>
+          </ul>
+
+          </li>
+
+
+          <li class="dropdown"><a class="nav-link scrollto" href="#about"> <span> Portfolio </span><i class="bi bi-chevron-down"></i></a>
+
+          <ul>
+            <li><a href="#">Our Portfolio</a></li>
+            <li><a href="#">Investment Process</a></li>
+          </ul>
+
+
+          <li class="dropdown"><a href="#"><span>Media</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              <li><a href="#">News</a></li>
+              <li><a href="#">Gallery</a></li>
+              <li><a href="#">Events</a></li>
+              <li><a href="#">Notice</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link scrollto" href="#contact">Invest Now</a></li>
+          <li><a class="nav-link scrollto" href="#team">Get Investment</a></li>
           <li><a class="getstarted scrollto" href="#about">Account</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -111,13 +129,13 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Ninestars</h3>
+            <h3>BGD Venture</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              820, Mamun Tower(8th floor) <br>
+              Shewrapara, Mirpur<br>
+              Dhaka-1216 <br><br>
+              <strong>Phone:</strong> +88 019-72379494<br>
+              <strong>Email:</strong> info@bgdonline.net<br>
             </p>
           </div>
 
